--- a/produtos/style.css
+++ b/produtos/style.css
@@ -37,12 +37,25 @@ main {
     padding: 20px;
 }
 
-footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
+.footer-right{
     width: 100%;
+    text-align: end;
+    margin: 2rem;
+}
+
+.footer-left{
+    width: 100%;
+    margin: 2rem;
+}
+
+.footer {
+    align-items: center;
+    display: flex;
+    color: #faf9fd;
+    border-radius:6px 6px 0 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
 }
 
 .conteudo-tabela {
@@ -103,12 +116,7 @@ color: black;
     justify-content: space-evenly;
 }
 
-.footer {
-    border-radius:6px 6px 0 0;
-    width: 100%;
-    height: 5rem;
-    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
-}
+
 
 .content {
     width: 100%;
