--- a/home/style.css
+++ b/home/style.css
@@ -121,7 +121,7 @@ color: black;
   .imagens {
     display: flex;
     flex-direction: column;
-    margin-right: 20px; /* Adjust margin as needed */
+    margin-right: 20px;
     max-width: 300px;
   }
   
