--- a/home/style.css
+++ b/home/style.css
@@ -1,4 +1,78 @@
 body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+header {
+    background-color: #333;
+    color: #fff;
+    padding: 10px 0;
+    text-align: center;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+nav ul li {
+    display: inline;
+    margin-right: 20px;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+main {
+    flex-grow: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    width: 100%;
+}
+
+.conteudo-tabela {
+    display: flex;
+    align-items: center;
+}
+
+.imagens {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+    max-width: 300px;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+    border: 2px solid #333;
+}
+
+th, td {
+    border: 1px solid #333;
+    padding: 8px;
+    text-align: left;
+}
+
+th {
+    background-color: #f2f2f2;
+}
+body {
     font-family: sans-serif;
     flex-direction: column;
     margin: 0;
@@ -39,3 +113,81 @@ color: black;
     width: 100%;
     height: 800px;
 }
+
+.conteudo-principal {
+    display: flex;
+  }
+  
+  .imagens {
+    display: flex;
+    flex-direction: column;
+    margin-right: 20px; /* Adjust margin as needed */
+    max-width: 300px;
+  }
+  
+  .imagens img {
+    margin-bottom: 10px;
+  }
+
+  .lista-destinos {
+    margin: 20px auto;
+    width: 80%;
+  }
+  
+  .lista-destinos h2 {
+    font-size: 24px;
+    margin-bottom: 10px;
+  }
+  
+  .lista-destinos p {
+    font-size: 16px;
+    line-height: 1.5;
+    margin-bottom: 20px;
+  }
+  
+  .lista-destinos ul {
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .lista-destinos li {
+    margin: 10px;
+    width: 300px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    overflow: hidden;
+  }
+  
+  .lista-destinos li a {
+    text-decoration: none;
+    color: #333;
+  }
+  
+  .lista-destinos li img {
+    width: 100%;
+    height: 150px;
+  }
+  
+  .lista-destinos li h3 {
+    font-size: 18px;
+    margin: 10px;
+  }
+  
+  .lista-destinos li p {
+    margin: 10px;
+  }
+  
+  .lista-destinos a {
+    display: block;
+    text-align: center;
+    margin: 20px auto;
+    padding: 10px 20px;
+    background-color: #333;
+    color: #fff;
+    border-radius: 5px;
+    text-decoration: none;
+  }
+  
